# SimpleGLRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  lightmanager.cpp  lightmanager.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  shapes.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/scene/: README.md  entitiy.cpp  entitiy.hpp  mesh.cpp  mesh.hpp  mesh_factory.cpp  mesh_factory.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  transform.cpp  transform.hpp
src/shaders/: fBasic.glsl  fLightCubeShader.glsl  fLightShader.glsl  vBasic.glsl  vLightCubeShader.glsl  vLightShader.glsl
src/shapes/: unitCube.cpp  unitCube.hpp
